--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+
+.porse img {
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+}
+
+.header-title {
+  font-size: 150px;
+}
